--- a/MongoDB/views/logout.ejs
+++ b/MongoDB/views/logout.ejs
@@ -5,17 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Express</title>
+    <title>Logout</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <main>
-        <form action="/contact" method="post">
-            <h1>Contact Now</h1>
-            <input type="text" name="name" placeholder="Name">
-            <input type="email" name="email" placeholder="Email">
-            <button type="submit">Send message</button>
+        <form action="/logout" method="get">
+            <button type="submit">Log out</button>
         </form>
     </main>
 </body>
